language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/writeref_borrow_invalid.exp
error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/writeref_borrow_invalid.move:10:9
   │
 6 │         let v_mut = &mut root.g.v;
   │                     ------------- Field 'v' is still being mutably borrowed by this reference
   ·
10 │         *g_mut = G { v: 0 };
   │         ^^^^^^^^^^^^^^^^^^^ Invalid mutation of reference.

